# efmt

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: coords.rs
macros/: Cargo.toml  README.md
macros/src/: code_gen.rs  debug_gen.rs  lib.rs  parser.rs  write_gen.rs
nopanic/: README.md
nopanic/examples/: char.rs  float.rs  ixx.rs  str.rs  uxx.rs
src/: impls.rs  lib.rs  utils.rs
src/impls/: array.rs  core.rs  float.rs  int.rs  ixx.rs  uxx.rs
tests/: core.rs  debug.rs  diverse.rs  float.rs  gh36.rs  int.rs  ptr_hex.rs  uxx_ixx.rs  vs-std-write.rs
tests/macros/: mod.rs
tests/nopanic/: Cargo.toml
tests/nopanic/examples/: core.rs  float.rs  int.rs  tuple
tests/nopanic/src/: lib.rs
tests/size/: Cargo.toml
tests/size/src/: analyse.py  main.rs
