[package]
authors = ["Jorge Aparicio <jorge@japaric.io>", "Winfried Simon <winfried.simon@gmail.com"]
categories = ["embedded", "no-std"]
description = "A small, fast and panic-free alternative to `core::fmt`"
documentation = "https://docs.rs/nfmt"
edition = "2021"
keywords = ["Debug", "Display", "Write", "format"]
license = "MIT OR Apache-2.0"
name = "sfmt"
readme = "README.md"
repository = "https://github.com/simsys/sfmt"
version = "0.1.0"

[dependencies]
nfmt-macros = { path = "macros", version = "0.1.0" }
heapless = "0.8.0"

# Do not set the std feature to default
[features]
std = []

[workspace]
members = [
  "macros",
]
