[package]
authors = [
  "Jorge Aparicio <jorge@japaric.io>",
  "Winfried Simon <winfried.simon@gmail.com",
]
categories = ["embedded", "no-std"]
description = "A tiny, fast and panic-free alternative to `core::fmt`"
documentation = "https://docs.rs/tfmt"
edition = "2021"
keywords = ["Debug", "Display", "Write", "format"]
license = "MIT OR Apache-2.0"
name = "tfmt"
readme = "README.md"
repository = "https://github.com/simsys/tfmt"
version = "0.4.0"

[dependencies]
tfmt-macros = { path = "macros", version = "0.4.0" }
heapless07 = { package = "heapless", version = "0.7.0", optional = true }
heapless08 = { package = "heapless", version = "0.8.0", optional = true }
heapless09 = { package = "heapless", version = "0.9.0", optional = true }

# Do not set the std feature to default
[features]
default = []
std = []
alloc = []

heapless07 = ["dep:heapless07"]
heapless08 = ["dep:heapless08"]
heapless09 = ["dep:heapless09"]


[workspace]
members = ["macros"]
