[package]
authors = ["Jorge Aparicio <jorge@japaric.io>", "Jorge Aparicio <jorge@japaric.io>", ]
edition = "2018"
name = "common"
publish = false
version = "0.0.0"

[dependencies]
panic-never = "0.1.0"
sfmt = { path = "../.." }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"

[workspace]