[package]
name = "blinky"
categories = ["embedded", "no-std"]
description = "size"
keywords = ["arm", "cortex-m"]
license = "MIT OR Apache-2.0"
version = "0.0.0"
edition = "2021"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "0.2"
cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
stm32f4xx-hal = { version = "0.17", features = ["rt", "stm32f407"] }
heapless = "0.8.0"
tfmt = { path = "../.." }

[workspace]

[profile.release]
opt-level = "s"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations